fix backgorund z-index

--- a/src/pages/Background/Background.module.css
+++ b/src/pages/Background/Background.module.css
@@ -64,9 +64,26 @@
     z-index: 0;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1280px) {
     .box::after {
       background-position: 170px -118px;
     }
   }
+}
+
+.isLoggin.box::before {
+  display: block;
+  content: '';
+
+  position: absolute;
+
+  top: 0;
+  right: 0;
+
+  width: 100%;
+  height: 100vh;
+
+  z-index: 1;
+  background-color: var(--background-color);
+  backdrop-filter: blur(50px);
 }
